--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -937,7 +937,7 @@ a.services_button:hover{
 	margin:0;
 	padding:30px 0;
 	color:#28323c;
-	font-size:28px;
+	font-size:18px;
 	background-color:#f0f0f0;
 	border-bottom:1px solid #e0e0e0;
 	text-transform:uppercase;
@@ -1418,6 +1418,10 @@ span.testimonials_autor{
 
 .pb {
 	padding-bottom: 100px;
+}
+
+.ms {
+	margin-right: 10px;
 }
 
 /* ========================================================== */
