--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -1332,7 +1332,6 @@ a.services_button:hover {
   }
 }
 
-
 .price_item {
   margin-bottom: 50px;
   text-align: center;
@@ -1883,6 +1882,7 @@ span.testimonials_autor {
   #footer_left {
     margin-left: 0%;
   }
+  
 }
 
 /* ========================================================== */
@@ -1980,7 +1980,6 @@ span.testimonials_autor {
 /* ========================================================== */
 
 @media (min-width: 1600px) {
-
   #footer_text {
     width: 70%;
   }
@@ -2256,8 +2255,8 @@ span.testimonials_autor {
   }
 
   #footer_left {
-	margin-left: 0%;
-}
+    margin-left: 0%;
+  }
 }
 
 /* Responsive Navigation
@@ -2567,84 +2566,458 @@ span.testimonials_autor {
     display: block;
   }
 }
-.counter-section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 2rem;
-}
-.counter-box {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  padding: 2rem;
-  border-radius: 1rem;
-  text-align: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
-  flex: 1 1 200px;
-  max-width: 200px;
-  transition: transform 0.3s;
-}
-.counter-box:hover {
-  transform: translateY(-5px);
-}
-.counter {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #fff;
-}
-.label {
-  margin-top: 0.5rem;
-  font-size: 1.1rem;
-  color: #fff;
-}
-@media (max-width: 600px) {
-  .counter-section {
-    padding: 2rem 1rem;
-  }
-  .counter-box {
-    max-width: 100%;
-  }
-}
 
 #backToTop {
-    position: fixed;
-    bottom: 40px;
-    right: 40px;
-    width: 60px;
-    height: 60px;
-    background: transparent;
-    border-radius: 50%;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #007BFF;
-    font-size: 28px;
-    font-weight: bold;
-    z-index: 9999;
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s ease;
-    user-select: none;
-  }
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  width: 60px;
+  height: 60px;
+  background: transparent;
+  border-radius: 50%;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #007bff;
+  font-size: 28px;
+  font-weight: bold;
+  z-index: 9999;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+  user-select: none;
+}
 
-  #backToTop.visible {
-    opacity: 1;
-    pointer-events: auto;
-  }
+#backToTop.visible {
+  opacity: 1;
+  pointer-events: auto;
+}
 
-  /* SVG positioning */
-  #progressCircle {
+/* SVG positioning */
+#progressCircle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: rotate(-90deg); /* start progress from top */
+}
+
+/* Center the SVG inside the button */
+#backToTop svg {
+  display: block;
+}
+
+.our_team {
+  display: flex;
+  justify-content: center;
+}
+
+.section-eight {
+  position: relative;
+  margin: auto;
+}
+.op-eight-section {
+  position: relative;
+}
+.sec-eight-text-area {
+  text-align: center;
+  padding: 100px 0 100px;
+}
+.sec-eight-text-area img {
+  padding: 2vh 0;
+}
+.sec-eight-text-area h1 {
+  padding: 2vh 0 3vh 0;
+  color: #fff;
+  line-height: 1.3;
+  font-size: 40px;
+  font-family: amaticSC;
+  letter-spacing: 2px;
+  padding-bottom: 30px;
+}
+.sec-eight-text-area p {
+  padding: 2vh 0;
+  font-size: 14px;
+  line-height: 1.6;
+  color: #fff;
+  font-family: mavenpro;
+}
+.section-eight .container-pe-quote {
+  position: absolute;
+  height: 100%;
+  top: 0px;
+  z-index: 1;
+}
+.section-eight .container-pe-quote.left {
+  left: 0px;
+}
+.section-eight .container-pe-quote.right {
+  right: 0px;
+}
+.section-eight .container-pe-quote .pp-quote {
+  cursor: pointer;
+  position: absolute;
+  border-radius: 100%;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+  animation-name: floating;
+  -webkit-animation-name: floating;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-transform-origin: 50% 1px;
+  -moz-transform-origin: 50% 1px;
+  -ms-transform-origin: 50% 1px;
+  -o-transform-origin: 50% 1px;
+  transform-origin: 50% 1px;
+  opacity: 0;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  -o-transition: all 2s ease;
+  transition: all 2s ease;
+}
+.container-pe-quote .pp-quote img {
+  overflow: hidden;
+  border-radius: 100%;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+}
+.section-eight .container-pe-quote .pp-quote:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: calc(100% + 5px);
+  width: calc(100% + 5px);
+  border-radius: 100%;
+  background-color: #fff;
+  -webkit-transform: translate(-50%, -50%) scale(0.9);
+  -moz-transform: translate(-50%, -50%) scale(0.9);
+  -ms-transform: translate(-50%, -50%) scale(0.9);
+  -o-transform: translate(-50%, -50%) scale(0.9);
+  transform: translate(-50%, -50%) scale(0.9);
+  -webkit-transition: all 0.25s ease;
+  -moz-transition: all 0.25s ease;
+  -ms-transition: all 0.25s ease;
+  -o-transition: all 0.25s ease;
+  transition: all 0.25s ease;
+}
+.container-pe-quote .pp-quote:hover:after,
+.container-pe-quote .pp-quote.active:after {
+  -webkit-transform: translate(-50%, -50%) scale(1);
+  -moz-transform: translate(-50%, -50%) scale(1);
+  -ms-transform: translate(-50%, -50%) scale(1);
+  -o-transform: translate(-50%, -50%) scale(1);
+  transform: translate(-50%, -50%) scale(1);
+}
+.section-eight .container-pe-quote .li-quote-1 {
+  height: 104px;
+  width: 104px;
+  left: 15px;
+  top: 95px;
+  animation-duration: 10s;
+  -webkit-animation-duration: 10s;
+  -webkit-transition-delay: 0.6s;
+  transition-delay: 0.6s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-2 {
+  height: 63px;
+  width: 63px;
+  left: 120px;
+  top: 270px;
+  animation-duration: 12s;
+  -webkit-animation-duration: 12s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-3 {
+  height: 64px;
+  width: 64px;
+  left: 68px;
+  top: 380px;
+  animation-duration: 6s;
+  -webkit-animation-duration: 6s;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-4 {
+  height: 73px;
+  width: 73px;
+  right: -15px;
+  top: 110px;
+  animation-duration: 5s;
+  -webkit-animation-duration: 5s;
+  -webkit-transition-delay: 0.7s;
+  transition-delay: 0.7s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-5 {
+  height: 73px;
+  width: 73px;
+  right: 28px;
+  top: 265px;
+  animation-duration: 8s;
+  -webkit-animation-duration: 8s;
+  -webkit-transition-delay: 0.4s;
+  transition-delay: 0.4s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-6 {
+  height: 45px;
+  width: 45px;
+  right: 108px;
+  top: 170px;
+  animation-duration: 7s;
+  -webkit-animation-duration: 7s;
+  -webkit-transition-delay: 0.2s;
+  transition-delay: 0.2s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-7 {
+  height: 48px;
+  width: 48px;
+  right: 40px;
+  top: 414px;
+  animation-duration: 7s;
+  -webkit-animation-duration: 7s;
+  -webkit-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+  opacity: 1;
+}
+.section-eight .container-pe-quote .li-quote-8 {
+  height: 63px;
+  width: 63px;
+  left: 20px;
+  top: 250px;
+  animation-duration: 5s;
+  -webkit-animation-duration: 5s;
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+  opacity: 1;
+}
+
+@keyframes floating {
+  0% {
+    -webkit-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -moz-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -ms-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -o-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    transform: rotate(0deg) translate(-10px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -moz-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -ms-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -o-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    transform: rotate(360deg) translate(-10px) rotate(-360deg);
+  }
+}
+@-webkit-keyframes floating {
+  0% {
+    -webkit-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -moz-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -ms-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    -o-transform: rotate(0deg) translate(-10px) rotate(0deg);
+    transform: rotate(0deg) translate(-10px) rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -moz-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -ms-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    -o-transform: rotate(360deg) translate(-10px) rotate(-360deg);
+    transform: rotate(360deg) translate(-10px) rotate(-360deg);
+  }
+}
+
+.section-eight .container-quote {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+  height: 135px;
+  -webkit-perspective: 10000px;
+  -moz-perspective: 10000px;
+  -ms-perspective: 10000px;
+  perspective: 10000px;
+}
+.section-eight .container-quote .quote {
+  max-width: 520px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 50%;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  -webkit-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  -moz-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  -o-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+}
+.section-eight .container-quote .quote.hide-bottom {
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(100%) rotateX(-70deg);
+  -moz-transform: translateX(-50%) translateY(100%) rotateX(-70deg);
+  -ms-transform: translateX(-50%) translateY(100%) rotateX(-70deg);
+  -o-transform: translateX(-50%) translateY(100%) rotateX(-70deg);
+  transform: translateX(-50%) translateY(100%) rotateX(-70deg);
+}
+.section-eight .container-quote .quote.hide-top {
+  opacity: 0;
+  -webkit-transform: translateX(-50%) translateY(-100%) rotateX(70deg);
+  -moz-transform: translateX(-50%) translateY(-100%) rotateX(70deg);
+  -ms-transform: translateX(-50%) translateY(-100%) rotateX(70deg);
+  -o-transform: translateX(-50%) translateY(-100%) rotateX(70deg);
+  transform: translateX(-50%) translateY(-100%) rotateX(70deg);
+}
+.section-eight .container-quote .quote.show {
+  opacity: 1;
+  -webkit-transform: translateX(-50%) translateY(0%) rotateX(0deg);
+  -moz-transform: translateX(-50%) translateY(0%) rotateX(0deg);
+  -ms-transform: translateX(-50%) translateY(0%) rotateX(0deg);
+  -o-transform: translateX(-50%) translateY(0%) rotateX(0deg);
+  transform: translateX(-50%) translateY(0%) rotateX(0deg);
+}
+
+.box-dpname img {
+  border-radius: 100%;
+  width: 150px;
+  height: 150px;
+}
+
+.section-eight .container-dp-name {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+  height: 225px;
+  -webkit-perspective: 10000px;
+  -moz-perspective: 10000px;
+  -ms-perspective: 10000px;
+  perspective: 10000px;
+  text-align: center;
+}
+.section-eight .container-dp-name .box-dpname {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0;
+  cursor: pointer;
+  text-align: center;
+  -webkit-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  -moz-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  -o-transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+  transition: all 1s cubic-bezier(0.5, -0.01, 0, 1.005);
+}
+.section-eight .container-dp-name .box-dpname.hide-dp-bottom {
+  opacity: 0;
+  -webkit-transform: translateX(0%) translateY(100%) rotateX(-70deg);
+  -moz-transform: translateX(0%) translateY(100%) rotateX(-70deg);
+  -ms-transform: translateX(0%) translateY(100%) rotateX(-70deg);
+  -o-transform: translateX(0%) translateY(100%) rotateX(-70deg);
+  transform: translateX(0%) translateY(100%) rotateX(-70deg);
+}
+.section-eight .container-dp-name .box-dpname.hide-dp-top {
+  opacity: 0;
+  -webkit-transform: translateX(0%) translateY(-100%) rotateX(70deg);
+  -moz-transform: translateX(0%) translateY(-100%) rotateX(70deg);
+  -ms-transform: translateX(0%) translateY(-100%) rotateX(70deg);
+  -o-transform: translateX(0%) translateY(-100%) rotateX(70deg);
+  transform: translateX(0%) translateY(-100%) rotateX(70deg);
+}
+.section-eight .container-dp-name .box-dpname.look {
+  opacity: 1;
+  -webkit-transform: translateX(0%) translateY(0%) rotateX(0deg);
+  -moz-transform: translateX(0%) translateY(0%) rotateX(0deg);
+  -ms-transform: translateX(0%) translateY(0%) rotateX(0deg);
+  -o-transform: translateX(0%) translateY(0%) rotateX(0deg);
+  transform: translateX(0%) translateY(0%) rotateX(0deg);
+}
+
+@media screen and (max-width: 767px) {
+  .sec-eight-text-area {
+    padding: 10px 0 10px 0;
+  }
+  .section-eight .container-pe-quote {
+    position: relative;
+    height: 500px;
+    top: 0px;
+    z-index: 1;
+    max-width: 300px;
+    margin: -70px auto 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .section-eight {
+    position: relative;
+  }
+  .section-eight .bottom-ani-cs {
     position: absolute;
-    top: 0;
+    top: 150px;
+    right: 16px;
+  }
+  .section-eight .container-pe-quote .li-quote-2 {
+    left: 60px;
+    top: 270px;
+  }
+  .section-eight .container-pe-quote .li-quote-6 {
+    right: 100px;
+    top: 179px;
+  }
+  .section-eight .container-pe-quote .li-quote-8 {
+    height: 43px;
+    width: 43px;
+    left: 0px;
+    top: 220px;
+  }
+  .section-eight .container-pe-quote .li-quote-3 {
     left: 0;
-    transform: rotate(-90deg); /* start progress from top */
   }
-
-  /* Center the SVG inside the button */
-  #backToTop svg {
-    display: block;
+  .section-eight .container-quote {
+    height: 205px;
+    overflow: hidden;
+    overflow-y: auto;
   }
+  .sec-eight-text-area {
+    padding: 10px 0 100px 0;
+  }
+}
 
-  
+.expert-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  width: 50%;
+  margin: auto;
+}
+
+.expert-content h1 {
+  color: #fff;
+}
+
+.expert-content .slider_text4 {
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.cta-note {
+  margin-top: 15px;
+  font-style: italic;
+  font-size: 14px;
+  color: #fff;
+}
